--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack --env.env=prod --mode production",
     "start": "webpack-dev-server --mode development --open --hot",
-    "analyze": "webpack --env.analyze --env.env=prod"
+    "analyze": "webpack --env.analyze --env.env=prod",
+    "lint": "eslint src/*/**/*.{js,ts,tsx} --quiet --fix"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,12 @@
     "@babel/core": "7.10.5",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
+    "@types/node": "14.0.26",
+    "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
+    "@typescript-eslint/eslint-plugin": "3.7.0",
+    "@typescript-eslint/parser": "3.7.0",
+    "awesome-typescript-loader": "5.2.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "css-loader": "3.6.0",
@@ -44,6 +51,7 @@
     "prettier": "2.0.5",
     "sass-loader": "9.0.2",
     "style-loader": "1.2.1",
+    "typescript": "3.9.7",
     "url-loader": "4.1.0",
     "webpack": "4.43.0",
     "webpack-bundle-analyzer": "3.8.0",
