--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/polyfill": "7.10.4",
-    "@types/styled-components": "^5.1.3",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "5.1.3",
     "antd": "4.6.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -71,7 +72,7 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "5.2.0"
   },
   "browserslist": [
     "last 1 version",
