--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/polyfill": "7.10.4",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-dom": "5.1.5",
     "@types/styled-components": "5.1.3",
     "antd": "4.6.4",
+    "bootstrap": "4.5.2",
+    "bootswatch": "4.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hot-loader": "4.12.21",
