--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "14.6.2",
     "@types/react": "16.9.48",
     "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
     "awesome-typescript-loader": "5.2.1",
