--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "bootswatch": "4.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "6.8.2",
     "react-hot-loader": "4.12.21",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
