--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-loader": "8.1.0",
     "css-loader": "4.2.2",
     "dotenv": "8.2.0",
-    "dotenv-webpack": "^3.0.0",
+    "dotenv-webpack": "3.0.0",
     "eslint": "7.7.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.11.0",
