--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
+    "reselect": "4.0.0",
     "styled-components": "5.2.0"
   },
   "browserslist": [
