--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/polyfill": "7.10.4",
     "@types/react-router-dom": "5.1.5",
+    "@types/redux-saga": "0.10.5",
     "@types/styled-components": "5.1.3",
     "antd": "4.6.4",
     "bootstrap": "4.5.2",
